@@ -547,16 +547,25 @@ typedef DWORD FLONG;
 #define LANG_ESTONIAN	0x25
 #define LANG_LATVIAN	0x26
 #define LANG_LITHUANIAN	0x27
-#define LANG_FARSI	0x29
+#define LANG_PERSIAN    0x29
+#define LANG_FARSI	LANG_PERSIAN
 #define LANG_VIETNAMESE	0x2a
 #define LANG_ARMENIAN	0x2b
 #define LANG_AZERI	0x2c
 #define LANG_BASQUE	0x2d
+#define LANG_LOWER_SORBIAN	0x2e
+#define LANG_UPPER_SORBIAN	0x2e
 #define LANG_MACEDONIAN	0x2f
+#define LANG_TSWANA	0x32
+#define LANG_XHOSA	0x34
+#define LANG_ZULU	0x35
 #define LANG_AFRIKAANS	0x36
 #define LANG_GEORGIAN	0x37
 #define LANG_FAEROESE	0x38
 #define LANG_HINDI	0x39
+#define LANG_MALTESE	0x3a
+#define LANG_SAMI	0x3b
+#define LANG_IRISH	0x3c
 #define LANG_MALAY	0x3e
 #define LANG_KAZAK	0x3f
 #define LANG_KYRGYZ	0x40
@@ -575,19 +584,60 @@ typedef DWORD FLONG;
 #define LANG_MARATHI	0x4e
 #define LANG_SANSKRIT	0x4f
 #define LANG_MONGOLIAN	0x50
+#define LANG_TIBETAN	0x51
+#define LANG_WELSH	0x52
+#define LANG_KHMER	0x53
+#define LANG_LAO	0x54
 #define LANG_GALICIAN	0x56
 #define LANG_KONKANI	0x57
 #define LANG_MANIPURI	0x58
 #define LANG_SINDHI	0x59
 #define LANG_SYRIAC	0x5a
+#define LANG_SINHALESE	0x5b
+#define LANG_INUKTITUT	0x5d
+#define LANG_AMHARIC	0x5e
+#define LANG_TAMAZIGHT	0x5f
 #define LANG_KASHMIRI	0x60
 #define LANG_NEPALI	0x61
+#define LANG_FRISIAN	0x62
+#define LANG_PASHTO	0x63
+#define LANG_FILIPINO	0x64
 #define LANG_DIVEHI	0x65
+#define LANG_HAUSA	0x68
+#define LANG_YORUBA	0x6a
+#define LANG_QUECHUA	0x6b
+#define LANG_SOTHO	0x6c
+#define LANG_BASHKIR	0x6d
+#define LANG_LUXEMBOURGISH	0x6e
+#define LANG_GREENLANDIC	0x6f
+#define LANG_IGBO	0x70
+#define LANG_TIGRIGNA	0x73
+#define LANG_YI	0x78
+#define LANG_MAPUDUNGUN	0x7a
+#define LANG_MOHAWK	0x7c
+#define LANG_BRETON	0x7e
 #define LANG_INVARIANT	0x7f
+#define LANG_UIGHUR	0x80
+#define LANG_MAORI	0x81
+#define LANG_OCCITAN	0x82
+#define LANG_CORSICAN	0x83
+#define LANG_ALSATIAN	0x84
+#define LANG_YAKUT	0x85
+#define LANG_KICHE	0x86
+#define LANG_KINYARWANDA	0x87
+#define LANG_WOLOF	0x88
+#define LANG_DARI	0x8c
+#define LANG_MALAGASY	0x8d
 #define SUBLANG_NEUTRAL	0x00
 #define SUBLANG_DEFAULT	0x01
 #define SUBLANG_SYS_DEFAULT	0x02
-#define SUBLANG_ARABIC_SAUDI_ARABIA	0x01
+#define SUBLANG_CUSTOM_DEFAULT	0x03
+#define SUBLANG_CUSTOM_UNSPECIFIED	0x04
+#define SUBLANG_UI_CUSTOM_DEFAULT	0x03
+#define SUBLANG_AFRIKAANS_SOUTH_AFRICA	0x01
+#define SUBLANG_ALBANIAN_ALBANIA	0x01
+#define SUBLANG_ALSATIAN_FRANCE	0x01
+#define SUBLANG_AMHARIC_ETHIOPIA	0x01
 #define SUBLANG_ARABIC_IRAQ	0x02
 #define SUBLANG_ARABIC_EGYPT	0x03
 #define SUBLANG_ARABIC_LIBYA	0x04
@@ -603,13 +653,30 @@ typedef DWORD FLONG;
 #define SUBLANG_ARABIC_UAE	0x0e
 #define SUBLANG_ARABIC_BAHRAIN	0x0f
 #define SUBLANG_ARABIC_QATAR	0x10
+#define SUBLANG_ARMENIAN_ARMENIA	0x01
+#define SUBLANG_ASSAMESE_INDIA	0x01
 #define SUBLANG_AZERI_LATIN	0x01
 #define SUBLANG_AZERI_CYRILLIC	0x02
+#define SUBLANG_BASHKIR_RUSSIA	0x01
+#define SUBLANG_BASQUE_BASQUE	0x01
+#define SUBLANG_BELARUSIAN_BELARUS	0x01
+#define SUBLANG_BENGALI_INDIA	0x01
+#define SUBLANG_BOSNIAN_BOSNIA_HERZEGOVINA_LATIN	0x05
+#define SUBLANG_BOSNIAN_BOSNIA_HERZEGOVINA_CYRILLIC	0x08
+#define SUBLANG_BRETON_FRANCE	0x01
+#define SUBLANG_BULGARIAN_BULGARIA	0x01
+#define SUBLANG_CATALAN_CATALAN	0x01
 #define SUBLANG_CHINESE_TRADITIONAL	0x01
 #define SUBLANG_CHINESE_SIMPLIFIED	0x02
 #define SUBLANG_CHINESE_HONGKONG	0x03
 #define SUBLANG_CHINESE_SINGAPORE	0x04
 #define SUBLANG_CHINESE_MACAU	0x05
+#define SUBLANG_CORSICAN_FRANCE	0x01
+#define SUBLANG_CZECH_CZECH_REPUBLIC	0x01
+#define SUBLANG_CROATIAN_CROATIA	0x01
+#define SUBLANG_CROATIAN_BOSNIA_HERZEGOVINA_LATIN	0x04
+#define SUBLANG_DANISH_DENMARK	0x01
+#define SUBLANG_DIVEHI_MALDIVES	0x01
 #define SUBLANG_DUTCH	0x01
 #define SUBLANG_DUTCH_BELGIAN	0x02
 #define SUBLANG_ENGLISH_US	0x01
@@ -617,6 +684,9 @@ typedef DWORD FLONG;
 #define SUBLANG_ENGLISH_AUS	0x03
 #define SUBLANG_ENGLISH_CAN	0x04
 #define SUBLANG_ENGLISH_NZ	0x05
+#if (WINVER >= 0x0600)
+#define SUBLANG_ENGLISH_IRELAND	0x06
+#endif
 #define SUBLANG_ENGLISH_EIRE	0x06
 #define SUBLANG_ENGLISH_SOUTH_AFRICA	0x07
 #define SUBLANG_ENGLISH_JAMAICA	0x08
@@ -625,32 +695,112 @@ typedef DWORD FLONG;
 #define SUBLANG_ENGLISH_TRINIDAD	0x0b
 #define SUBLANG_ENGLISH_ZIMBABWE	0x0c
 #define SUBLANG_ENGLISH_PHILIPPINES	0x0d
+#define SUBLANG_ENGLISH_INDIA	0x10
+#define SUBLANG_ENGLISH_MALAYSIA	0x11
+#define SUBLANG_ENGLISH_SINGAPORE	0x12
+#define SUBLANG_ESTONIAN_ESTONIA	0x01
+#define SUBLANG_FAEROESE_FAROE_ISLANDS	0x01
+#define SUBLANG_FILIPINO_PHILIPPINES	0x01
+#define SUBLANG_FINNISH_FINLAND	0x01
 #define SUBLANG_FRENCH	0x01
 #define SUBLANG_FRENCH_BELGIAN	0x02
 #define SUBLANG_FRENCH_CANADIAN	0x03
 #define SUBLANG_FRENCH_SWISS	0x04
 #define SUBLANG_FRENCH_LUXEMBOURG	0x05
 #define SUBLANG_FRENCH_MONACO	0x06
+#define SUBLANG_FRISIAN_NETHERLANDS	0x01
+#define SUBLANG_GALICIAN_GALICIAN	0x01
+#define SUBLANG_GEORGIAN_GEORGIA	0x01
 #define SUBLANG_GERMAN	0x01
 #define SUBLANG_GERMAN_SWISS	0x02
 #define SUBLANG_GERMAN_AUSTRIAN	0x03
 #define SUBLANG_GERMAN_LUXEMBOURG	0x04
 #define SUBLANG_GERMAN_LIECHTENSTEIN	0x05
+#define SUBLANG_GREEK_GREECE	0x01
+#define SUBLANG_GREENLANDIC_GREENLAND	0x01
+#define SUBLANG_GUJARATI_INDIA	0x01
+#define SUBLANG_HAUSA_NIGERIA	0x01
+#define SUBLANG_HEBREW_ISRAEL	0x01
+#define SUBLANG_HINDI_INDIA	0x01
+#define SUBLANG_HUNGARIAN_HUNGARY	0x01
+#define SUBLANG_ICELANDIC_ICELAND	0x01
+#define SUBLANG_IGBO_NIGERIA	0x01
+#define SUBLANG_INDONESIAN_INDONESIA	0x01
+#define SUBLANG_INUKTITUT_CANADA	0x01
+#define SUBLANG_INUKTITUT_CANADA_LATIN	0x01
+#define SUBLANG_IRISH_IRELAND	0x01
 #define SUBLANG_ITALIAN	0x01
 #define SUBLANG_ITALIAN_SWISS	0x02
+#define SUBLANG_JAPANESE_JAPAN	0x01
 #define SUBLANG_KASHMIRI_INDIA	0x02
 #define SUBLANG_KASHMIRI_SASIA	0x02
+#define SUBLANG_KAZAK_KAZAKHSTAN	0x01
+#define SUBLANG_KHMER_CAMBODIA	0x01
+#define SUBLANG_KICHE_GUATEMALA	0x01
+#define SUBLANG_KINYARWANDA_RWANDA	0x01
+#define SUBLANG_KONKANI_INDIA	0x01
 #define SUBLANG_KOREAN	0x01
+#define SUBLANG_KYRGYZ_KYRGYZSTAN	0x01
+#define SUBLANG_LAO_LAO_PDR	0x01
+#define SUBLANG_LATVIAN_LATVIA	0x01
+#if (WINVER >= 0x0600)
+#define SUBLANG_LITHUANIAN_LITHUANIA	0x01
+#endif
 #define SUBLANG_LITHUANIAN	0x01
+#define SUBLANG_LOWER_SORBIAN_GERMANY	0x01
+#define SUBLANG_LUXEMBOURGISH_LUXEMBOURG	0x01
+#define SUBLANG_MACEDONIAN_MACEDONIA	0x01
 #define SUBLANG_MALAY_MALAYSIA	0x01
 #define SUBLANG_MALAY_BRUNEI_DARUSSALAM	0x02
+#define SUBLANG_MALAYALAM_INDIA	0x01
+#define SUBLANG_MALTESE_MALTA	0x01
+#define SUBLANG_MAORI_NEW_ZEALAND	0x01
+#define SUBLANG_MAPUDUNGUN_CHILE	0x01
+#define SUBLANG_MARATHI_INDIA	0x01
+#define SUBLANG_MARATHI_INDIA	0x01
+#define SUBLANG_MOHAWK_MOHAWK	0x01
+#define SUBLANG_MONGOLIAN_CYRILLIC_MONGOLIA	0x01
+#define SUBLANG_MONGOLIAN_PRC	0x02
+#define SUBLANG_NEPALI_NEPAL	0x01
 #define SUBLANG_NEPALI_INDIA	0x02
 #define SUBLANG_NORWEGIAN_BOKMAL	0x01
 #define SUBLANG_NORWEGIAN_NYNORSK	0x02
+#define SUBLANG_OCCITAN_FRANCE	0x01
+#define SUBLANG_ORIYA_INDIA	0x01
+#define SUBLANG_PASHTO_AFGHANISTAN	0x01
+#define SUBLANG_PERSIAN_IRAN	0x01
+#define SUBLANG_POLISH_POLAND	0x01
 #define SUBLANG_PORTUGUESE_BRAZILIAN	0x01
+#if (WINVER >= 0x0600)
+#define SUBLANG_PORTUGUESE_PORTUGAL	0x02
+#endif
 #define SUBLANG_PORTUGUESE	0x02
+#define SUBLANG_PUNJABI_INDIA	0x01
+#define SUBLANG_QUECHUA_BOLIVIA	0x01
+#define SUBLANG_QUECHUA_ECUADOR	0x02
+#define SUBLANG_QUECHUA_PERU	0x03
+#define SUBLANG_ROMANIAN_ROMANIA	0x01
+#define SUBLANG_ROMANSH_SWITZERLAND	0x01
+#define SUBLANG_RUSSIAN_RUSSIA	0x01
+#define SUBLANG_SAMI_NORTHERN_NORWAY	0x01
+#define SUBLANG_SAMI_NORTHERN_SWEDEN	0x02
+#define SUBLANG_SAMI_NORTHERN_FINLAND	0x03
+#define SUBLANG_SAMI_LULE_NORWAY	0x04
+#define SUBLANG_SAMI_LULE_SWEDEN	0x05
+#define SUBLANG_SAMI_SOUTHERN_NORWAY	0x06
+#define SUBLANG_SAMI_SOUTHERN_SWEDEN	0x07
+#define SUBLANG_SAMI_SKOLT_FINLAND	0x03
+#define SUBLANG_SAMI_INARI_FINLAND	0x03
+#define SUBLANG_SANSKRIT_INDIA	0x01
 #define SUBLANG_SERBIAN_LATIN	0x02
 #define SUBLANG_SERBIAN_CYRILLIC	0x03
+#define SUBLANG_SERBIAN_BOSNIA_HERZEGOVINA_LATIN	0x06
+#define SUBLANG_SERBIAN_BOSNIA_HERZEGOVINA_CYRILLIC	0x07
+#define SUBLANG_SINDHI_AFGHANISTAN	0x02
+#define SUBLANG_SINHALESE_SRI_LANKA	0x01
+#define SUBLANG_SOTHO_NORTHERN_SOUTH_AFRICA	0x01
+#define SUBLANG_SLOVAK_SLOVAKIA	0x01
+#define SUBLANG_SLOVENIAN_SLOVENIA	0x01
 #define SUBLANG_SPANISH	0x01
 #define SUBLANG_SPANISH_MEXICAN	0x02
 #define SUBLANG_SPANISH_MODERN	0x03
@@ -671,12 +821,40 @@ typedef DWORD FLONG;
 #define SUBLANG_SPANISH_HONDURAS	0x12
 #define SUBLANG_SPANISH_NICARAGUA	0x13
 #define SUBLANG_SPANISH_PUERTO_RICO	0x14
+#define SUBLANG_SPANISH_US	0x15
+#if (WINVER >= 0x0600)
+#define SUBLANG_SWEDISH_SWEDEN	0x01
+#endif
 #define SUBLANG_SWEDISH	0x01
 #define SUBLANG_SWEDISH_FINLAND	0x02
+#define SUBLANG_SYRIAC	0x01
+#define SUBLANG_TAJIK_TAJIKISTAN	0x01
+#define SUBLANG_TAMAZIGHT_ALGERIA_LATIN	0x02
+#define SUBLANG_TAMIL_INDIA	0x01
+#define SUBLANG_TATAR_RUSSIA	0x01
+#define SUBLANG_TELUGU_INDIA	0x01
+#define SUBLANG_THAI_THAILAND	0x01
+#define SUBLANG_TIBETAN_PRC	0x01
+#define SUBLANG_TIBETAN_BHUTAN	0x01
+#define SUBLANG_TIGRIGNA_ERITREA	0x01
+#define SUBLANG_TSWANA_SOUTH_AFRICA	0x01
+#define SUBLANG_TURKISH_TURKEY	0x01
+#define SUBLANG_TURKMEN_TURKMENISTAN	0x01
+#define SUBLANG_UIGHUR_PRC	0x01
+#define SUBLANG_UKRAINIAN_UKRAINE	0x01
+#define SUBLANG_UPPER_SORBIAN_GERMANY	0x01
 #define SUBLANG_URDU_PAKISTAN	0x01
 #define SUBLANG_URDU_INDIA	0x02
 #define SUBLANG_UZBEK_LATIN	0x01
 #define SUBLANG_UZBEK_CYRILLIC	0x02
+#define SUBLANG_VIETNAMESE_VIETNAM	0x01
+#define SUBLANG_WELSH_UNITED_KINGDOM	0x01
+#define SUBLANG_WOLOF_SENEGAL	0x01
+#define SUBLANG_YORUBA_NIGERIA	0x01
+#define SUBLANG_XHOSA_SOUTH_AFRICA	0x01
+#define SUBLANG_YAKUT_RUSSIA	0x01
+#define SUBLANG_YI_PRC	0x01
+#define SUBLANG_ZULU_SOUTH_AFRICA	0x01
 #define NLS_VALID_LOCALE_MASK	1048575
 #define SORT_DEFAULT	0
 #define SORT_JAPANESE_XJIS	0
@@ -726,7 +904,6 @@ typedef DWORD FLONG;
 #define PROCESSOR_MIPS_R4000 4000
 #define PROCESSOR_ALPHA_21064 21064
 #define PROCESSOR_INTEL_IA64 2200
-
 #define PROCESSOR_ARCHITECTURE_INTEL 0
 #define PROCESSOR_ARCHITECTURE_MIPS 1
 #define PROCESSOR_ARCHITECTURE_ALPHA 2
