@@ -1,3 +1,8 @@
+2006-05-10  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>
+
+	* include/winnt.h (LANG_*,SUBLANG_*): Define.
+	Languages newly added to the documentation.
+
 2006-05-05  Chris Sutcliffe <ir0nh34d@users.sf.net>
 
     * lib/directx/Makefile.in: Remove reference to libquartz.a since it was moved.
